# GridironLabs

./: .gitignore  GridironLabs_OOTP26_Panel_Audit.md  GridironLabs_requirements.txt  GridironLabs_senior_engineer_review.md  README.md  UI_COMPONENT_NOMENCLATURE.md  main.py  new_panel.md  new_utility.md  one-off-cfb-analysis.py  panel-problem.txt  pyproject.toml  recommendation.txt
data/: README.md
data/interim/: README.md
data/processed/: README.md  coaches.parquet  players.parquet  teams.parquet
data/raw/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CONTRIBUTING.md  DATA_DICTIONARY.md  FEEDBACK_MATRIX.md  README.md  UI_CONTRACT.md  ui_panels.md
scripts/: README.md  bootstrap_data.py  debug_layout_2.py  generate_fake_nfl_data.py  refresh_data.py  ui_snapshot.py
src/: README.md
src/gridironlabs/: README.md  __init__.py  __main__.py  app.py  main.py
src/gridironlabs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gridironlabs/core/: README.md  __init__.py  config.py  errors.py  logging.py  logging_utils.py  models.py  nfl_structure.py  repository.py
src/gridironlabs/data/: README.md  __init__.py  parquet_repository.py  repository.py  schemas.py
src/gridironlabs/data/loaders/: __init__.py  parquet_loader.py
src/gridironlabs/data/sources/: __init__.py  nflreadpy_adapter.py  nflreadpy_client.py  pfr_scraper.py
src/gridironlabs/resources/: README.md  __init__.py  standings.qss  theme.qss
src/gridironlabs/resources/styles/: dark.qss
src/gridironlabs/services/: README.md  __init__.py  search.py  search_service.py  summary.py  summary_service.py
src/gridironlabs/ui/: README.md  __init__.py  app.py  main_window.py  navigation_service.py
src/gridironlabs/ui/assets/: __init__.py  logos.py
src/gridironlabs/ui/dev/: __init__.py  panels.py  snapshot.py
src/gridironlabs/ui/layouts/: __init__.py  grid_canvas.py
src/gridironlabs/ui/overlays/: __init__.py  grid_overlay.py
src/gridironlabs/ui/pages/: __init__.py  base_page.py  (+4 more)
tests/: README.md  test_main_window.py
tests/integration/: test_parquet_roundtrip.py
tests/ui/: test_compact_filter_bar.py  test_entity_navigation.py  test_home_leaders_panel.py  test_key_value_list.py  test_main_window.py  test_ootp_table_view.py  test_panel_system.py  test_rating_bars.py  test_richtext_and_chart_bodies.py  test_schedule_widget.py  test_scoreboard_widgets.py  test_settings_form_primitives.py  test_table_delegates.py  test_table_persistence.py
tests/unit/: test_config.py
ui_artifacts/: player-summary-personal-details.json
(+37 files in other folders)
